--- a/images/grafana-loki/docker-compose.yaml
+++ b/images/grafana-loki/docker-compose.yaml
@@ -17,12 +17,9 @@ services:
   promtail:
     image: grafana/promtail:2.7.4
     volumes:
-      - //var/log:/var/log
+      # Example how to add logs to monitor:
+      - /d/code/mongodb-docker-compose/:/var/log
       - ./configs/promtail-config.yaml:/etc/promtail/config.yml
-      # to read container labels and logs
-      - //var/run/docker.sock:/var/run/docker.sock
-      - //var/lib/docker/containers:/var/lib/docker/containers
-    command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
 
